11 januari 2018 v184: Fixed: Tekst liep soms buiten de Persoon toevoegen knoppen. Fixed: Op mobiele telefoons waren soms niet alle knoppen zichtbaar. Ze “wrappen” nu indien er erg weinig ruimte is.

--- a/main.css
+++ b/main.css
@@ -653,7 +653,12 @@ a {
 .popupFooter {
   display:         flex;
   justify-content: flex-end;
+  flex-wrap:       wrap;
   margin-top:      10px;
+}
+
+.popupFooter .button {
+  margin-bottom: 5px;
 }
 
 .popupInput {
